--- a/pytest_html/resources/style.css
+++ b/pytest_html/resources/style.css
@@ -2,25 +2,27 @@ body {
 	font-family: Helvetica, Arial, sans-serif;
 	font-size: 12px;
 	min-width: 1200px;
-	color: #999;
+	background-color: rgb(53, 49, 49);
+	padding: 2%;
+	padding-top: 1%; 
 }
 
 h1 {
 	font-size: 24px;
-	color: black;
+	color: whitesmoke;
 }
 
 h2 {
 	font-size: 16px;
-	color: black;
+	color: whitesmoke;
 }
 
 p {
-    color: black;
+	color: whitesmoke;
 }
 
 a {
-	color: #999;
+	color: rgb(181, 186, 238);
 }
 
 table {
@@ -32,24 +34,29 @@ table {
  ******************************/
 
 #environment td {
+	color:whitesmoke;
 	padding: 5px;
 	border: 1px solid #E6E6E6;
 }
 
+/*
 #environment tr:nth-child(odd) {
 	background-color: #f6f6f6;
 }
-
+*/
 /******************************
  * TEST RESULT COLORS
  ******************************/
 span.passed, .passed .col-result {
+    font-weight: 700;
 	color: green;
 }
 span.skipped, span.xfailed, span.rerun, .skipped .col-result, .xfailed .col-result, .rerun .col-result {
+	font-weight: 700;
 	color: orange;
 }
 span.error, span.failed, span.xpassed, .error .col-result, .failed .col-result, .xpassed .col-result  {
+	font-weight: 700;
 	color: red;
 }
 
@@ -69,18 +76,19 @@ span.error, span.failed, span.xpassed, .error .col-result, .failed .col-result, 
 
 #results-table {
 	border: 1px solid #e6e6e6;
-	color: #999;
+	color: rgb(248, 244, 244);
 	font-size: 12px;
 	width: 100%
 }
 
 #results-table th, #results-table td {
+	font-weight: 700;
 	padding: 5px;
 	border: 1px solid #E6E6E6;
 	text-align: left
 }
 #results-table th {
-	font-weight: bold
+	font-weight: bold;
 }
 
 /*------------------
@@ -91,9 +99,9 @@ span.error, span.failed, span.xpassed, .error .col-result, .failed .col-result, 
 	height: inherit
 }
 .log {
-	background-color: #e6e6e6;
+	background-color: #5f5b5b;
 	border: 1px solid #e6e6e6;
-	color: black;
+	color: rgb(6, 220, 248);
 	display: block;
 	font-family: "Courier New", Courier, monospace;
 	height: 230px;
@@ -160,4 +168,79 @@ div.image img {
 .desc.active .sort-icon {
 	/*finish triangle*/
 	border-top: 8px solid #999;
+}
+/*****XIAOZHIYONG*****/
+
+label {
+    display: inline-block;
+    max-width: 100%;
+    margin-bottom: 5px;
+    font-weight: 700
+}
+
+.label {
+    display: inline;
+    padding: .2em .6em .3em;
+    font-size: 75%;
+    font-weight: 700;
+    line-height: 1;
+    color: #fff;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: .25em
+}
+
+.label-default {
+    background-color: #777
+}
+
+.label-default[href]:focus,
+.label-default[href]:hover {
+    background-color: #5e5e5e
+}
+
+.label-primary {
+    background-color: #337ab7
+}
+
+.label-primary[href]:focus,
+.label-primary[href]:hover {
+    background-color: #286090
+}
+
+.label-success {
+    background-color: #5cb85c
+}
+
+.label-success[href]:focus,
+.label-success[href]:hover {
+    background-color: #449d44
+}
+
+.label-info {
+    background-color: #5bc0de
+}
+
+.label-info[href]:focus,
+.label-info[href]:hover {
+    background-color: #31b0d5
+}
+
+.label-warning {
+    background-color: #f0ad4e
+}
+
+.label-warning[href]:focus,
+.label-warning[href]:hover {
+    background-color: #ec971f
+}
+
+.label-danger {
+    background-color: #d9534f
+}
+
+.label-danger[href]:focus,
+.label-danger[href]:hover {
+    background-color: #c9302c
 }
