--- a/pytest_html/resources/style.css
+++ b/pytest_html/resources/style.css
@@ -2,9 +2,9 @@ body {
 	font-family: Helvetica, Arial, sans-serif;
 	font-size: 12px;
 	min-width: 1200px;
-	background-color: rgb(53, 49, 49);
-	padding: 2%;
-	padding-top: 1%; 
+	background-color: rgb(20, 20, 20);
+	color: snow;
+	padding: 0.5%;
 }
 
 h1 {
@@ -48,15 +48,18 @@ table {
  * TEST RESULT COLORS
  ******************************/
 span.passed, .passed .col-result {
-    font-weight: 700;
-	color: green;
+	font-size: 13px;
+    font-weight: 450;
+	color: rgb(13, 240, 13);
 }
 span.skipped, span.xfailed, span.rerun, .skipped .col-result, .xfailed .col-result, .rerun .col-result {
-	font-weight: 700;
+	font-size: 13px;
+	font-weight: 450;
 	color: orange;
 }
 span.error, span.failed, span.xpassed, .error .col-result, .failed .col-result, .xpassed .col-result  {
-	font-weight: 700;
+	font-size: 13px;
+	font-weight: 450;
 	color: red;
 }
 
@@ -78,11 +81,11 @@ span.error, span.failed, span.xpassed, .error .col-result, .failed .col-result, 
 	border: 1px solid #e6e6e6;
 	color: rgb(248, 244, 244);
 	font-size: 12px;
-	width: 100%
+	/*width: 100%*/
 }
 
 #results-table th, #results-table td {
-	font-weight: 700;
+	font-weight: 450;
 	padding: 5px;
 	border: 1px solid #E6E6E6;
 	text-align: left
@@ -104,21 +107,23 @@ span.error, span.failed, span.xpassed, .error .col-result, .failed .col-result, 
 	color: rgb(6, 220, 248);
 	display: block;
 	font-family: "Courier New", Courier, monospace;
-	height: 230px;
+	max-height: 230px;
 	overflow-y: scroll;
 	padding: 5px;
-	white-space: pre-wrap
+	white-space: pre-wrap;
+	min-width:580px
 }
 div.image {
 	border: 1px solid #e6e6e6;
 	float: right;
 	height: 240px;
-	margin-left: 5px;
+	margin-left: 0px;
 	overflow: hidden;
-	width: 320px
+	width: 380px
 }
 div.image img {
-	width: 320px
+	width: 100%;
+	height: 100%;
 }
 .collapsed {
 	display: none;
@@ -175,14 +180,14 @@ label {
     display: inline-block;
     max-width: 100%;
     margin-bottom: 5px;
-    font-weight: 700
+    font-weight: 450
 }
 
 .label {
     display: inline;
     padding: .2em .6em .3em;
     font-size: 75%;
-    font-weight: 700;
+    font-weight: 450;
     line-height: 1;
     color: #fff;
     text-align: center;
